--- a/dsfsdfsdf/makefile
+++ b/dsfsdfsdf/makefile
@@ -15,8 +15,8 @@ ft_memmove.c \
 ft_memset.c \
 ft_strlen.c \
 ft_tolower.c \
-ft_toupper.c
-#ft_strlcpy.c 
+ft_toupper.c \
+ft_strlcpy.c 
 
 OBJ = $(FILE:%.c=%.o)
 
